--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
     <h2>Where?</h2>
     <!--map-->
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm-10">
         <div class="container"  id="map-container"></div>
       </div>
-      <div class="col-sm slide-text">
-        <div class="container"  id="dateselect">      </div>
+      <div class="col-sm-2">
+        <div class="container"  id="dateselect2">      </div>
       </div>
       </div>
     </div>
@@ -239,9 +239,9 @@
   <script src="js/total.js"></script>
   <script src="js/attend_roo.js"></script>
   <script src="js/when.js"></script>
-  <!--<script src="js/where.js"></script>-->
-  <!--<script src="js/cartogram.js"></script>-->
-
+  <script src="js/where.js"></script>
+  <script src="js/cartogram.js"></script>
+  <script src="js/time-select.js"></script>
 
 </body>
 
