--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <a class="nav-link js-scroll-trigger" href="#when">When?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#where">Where?</a>
+          <a class="nav-link js-scroll-trigger" href="#where">Where?</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#what">What?</a>
           </li>
         </ul>
       </div>
@@ -58,7 +61,7 @@
   </div>
 
   <div class="text-white divide">
-    <img src="img/roorace.jpg">
+    <img src="img/roorace.JPG">
     <div class="quote centered">PREPARE THY SELF</div>
   </div>
 
@@ -204,6 +207,24 @@
     <img src="img/where.jpg">
     <div class="quote centered">RESPECT THE FARM</div>
   </div>
+
+  <section id="what", class="graphic-body">
+    <h2>What?</h2>
+    <br>
+    <h3>Best Of:</h3>
+    <br>
+    <iframe src="https://open.spotify.com/embed/playlist/4y6axTxYXTqpzWTkhwXgF0" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/4rlAVRRK9Yye2AQv5iaGTM" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/3yumm8V3mF5YdiR7huSMoC" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/0HSbm5vyXzUcu459E8rLL8" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/2Qzje84uDrQQdWQscUWsEn" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/0sjwWxOswyymcwjKp109uU" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <br>
+    <h3>Roo Lists</h3>
+    <br>
+    <iframe src="https://open.spotify.com/embed/playlist/1EpQqDt1lK3NVZnAcD02sN" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/42iwKs6meNj3tzEqmgFalT" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+  </section>
 
   <div class="text-white divide">
     <img src="img/wall.jpg">
