failed time dependence on force directed layout

--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
 
     <!--Forced Layout Graph-->
     <br>
-    <p>How we are connected.</p>
     <!--map-->
     <div class="row">
       <div class="col-sm-9">
@@ -224,6 +223,8 @@
     <h2>This</h2>
     <br>
     <p>The number of years we've been to Bonnaroo.</p>
+    <div id="flower-chart-key"></div>
+    <br>
     <div id = "flower-chart"></div>
   </section>
 
@@ -280,8 +281,9 @@
 
   <!-- Custom JavaScript-->
   <script src="js/time-select.js"></script>
-  <script src="js/network_time.js"></script>
-  <script src="js/who_network.js"></script>
+  <!--<script src="js/network_time.js"></script>-->
+  <!--<script src="js/who_network.js"></script>-->
+  <script src="js/network.js"></script>
   <script src="js/total.js"></script>
   <script src="js/attend_roo.js"></script>
   <script src="js/when.js"></script>
