final touches, just need profile info

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#this">This</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#what">What?</a>
+            <a class="nav-link js-scroll-trigger" href="#that">That</a>
           </li>
         </ul>
       </div>
@@ -51,8 +51,9 @@
 
   <header class="main-header text-white">
     <div class="container text-center">
-      <h1>Mom's Spaghetti</h1>
-      <div class="lead">Bonnaroo croo insights</div>
+      <h1>Squirrel Squad Presents:</h1>
+      <h1 id="main_title">The Less I Know The Sp'ghetter</h1>
+      <div class="lead">Bonnaroo Croo Insights</div>
     </div>
   </header>
 
@@ -78,23 +79,15 @@
     <div class="carousel slide" , id="profile" data-ride="carousel">
       <div id="carouselControl" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <!--CIRIA-->
+          <!--Ciria-->
           <div class="carousel-item active container">
             <div class="row">
               <div class="col-sm">
                 <img class="d-block w-100 slides h-75" src="img/ciria.jpg" >              </div>
               <div class="col-sm slide-text">
-                Ciria
-              </div>
-            </div>
-          </div>
-          <!--James-->
-          <div class="carousel-item container">
-            <div class="row">
-              <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/james.jpg" >              </div>
-              <div class="col-sm slide-text">
-                James Fullerton
+                <h4>Ciria Polanco</h4>
+                <p class="slide-years">2 years</p>
+                <p class="slide-quote"></p>
               </div>
             </div>
           </div>
@@ -104,17 +97,27 @@
               <div class="col-sm">
                 <img class="d-block w-100 slides h-75" src="img/katy.jpg" >              </div>
               <div class="col-sm slide-text">
-                Katy McKeough
+                <div class="col-sm slide-text">
+                  <h4>Katy McKeough</h4>
+                  <p class="slide-years">4 years</p>
+                  <p class="slide-quote"></p>
+                </div>
               </div>
             </div>
           </div>
-          <!--Kyle / Henry-->
+          <!--Kyle / Butters-->
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
                 <img class="d-block w-100 slides h-75" src="img/kyle_henry.jpeg" >              </div>
               <div class="col-sm slide-text">
-                Kyle Henson & Butters
+                <h4>Kyle Henson</h4>
+                <p class="slide-years">6 years</p>
+                <p class="slide-quote">Our fearless leader.</p>
+                <br>
+                <h4>Butters</h4>
+                <p class="slide-years">2 years</p>
+                <p class="slide-quote">Is not real.</p>
               </div>
             </div>
           </div>
@@ -124,7 +127,11 @@
               <div class="col-sm">
                 <img class="d-block w-100 slides h-75" src="img/malcolm.jpeg" >              </div>
               <div class="col-sm slide-text">
-                Malcolm
+                <div class="col-sm slide-text">
+                  <h4>Malcolm Roediger</h4>
+                  <p class="slide-years">2 years</p>
+                  <p class="slide-quote"></p>
+                </div>
               </div>
             </div>
           </div>
@@ -134,19 +141,83 @@
               <div class="col-sm">
                 <img class="d-block w-100 slides h-75" src="img/moritz.jpg" >              </div>
               <div class="col-sm slide-text">
-                Mortiz
+                <div class="col-sm slide-text">
+                  <h4>Moritz</h4>
+                  <p class="slide-years">2 years</p>
+                  <p class="slide-quote"></p>
+                </div>
               </div>
             </div>
           </div>
-          <!--Aubry & Sarah-->
+          <!--Alex V.-->
           <div class="carousel-item container">
             <div class="row">
               <div class="col-sm">
-                <img class="d-block w-100 slides h-75" src="img/aubrey_sarah.jpg" >              </div>
+                <img class="d-block w-100 slides h-75" src="img/alexv.jpeg" >              </div>
               <div class="col-sm slide-text">
-                Aubrey
+                <div class="col-sm slide-text">
+                  <h4>Alex Vogelsang</h4>
+                  <p class="slide-years">2 years</p>
+                  <p class="slide-quote"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Ben-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block w-100 slides h-75" src="img/ben.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <div class="col-sm slide-text">
+                  <h4>Ben Whalen</h4>
+                  <p class="slide-years">4 years</p>
+                  <p class="slide-quote"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Julia-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block w-100 slides h-75" src="img/julia.jpeg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Julia Constantine</h4>
+                <p class="slide-years">4 years</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Michele, Mark & Corndog-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block w-100 slides h-75" src="img/michele_mark_conner.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Mark Herzog</h4>
+                <p class="slide-years">4 years</p>
+                <p class="slide-quote"></p>
                 <br>
-                Sarah McQuade
+                <h4>Michele Herzog</h4>
+                <p class="slide-years">2 years</p>
+                <p class="slide-quote"></p>
+                <br>
+                <h4>Corndog</h4>
+                <p class="slide-years">4 years</p>
+                <p class="slide-quote"></p>
+              </div>
+            </div>
+          </div>
+          <!--Claire-->
+          <div class="carousel-item container">
+            <div class="row">
+              <div class="col-sm">
+                <img class="d-block w-100 slides h-75" src="img/claire.jpg" >              </div>
+              <div class="col-sm slide-text">
+                <h4>Claire Felten</h4>
+                <p class="slide-years">2 years</p>
+                <p class="slide-quote"></p>
               </div>
             </div>
           </div>
@@ -164,15 +235,18 @@
 
     <!--Forced Layout Graph-->
     <br>
-    <!--map-->
-    <div class="row">
-      <div class="col-sm-9">
+    <p><b><i>How we made it to Roo.  </b></i> The key friendships that brought us to the farm.
+      Current groop members are highlighted.</p>
+  <br>
+      <!--map-->
+    <!--<div class="row">-->
+      <!--<div class="col-sm-9">-->
         <div class="container"  id="network"></div>
-      </div>
-      <div class="col-sm-3">
-        <div class="container"  id="dateselect1">      </div>
-      </div>
-    </div>
+      <!--</div>-->
+      <!--<div class="col-sm-3">-->
+        <!--<div class="container"  id="dateselect1">      </div>-->
+      <!--</div>-->
+    <!--</div>-->
   </section>
 
   <!--Quote Divide-->
@@ -187,7 +261,9 @@
   <section id="when" class="graphic-body">
     <h2>When?</h2>
     <!--Timeline-->
-
+    <br>
+    <p><b><i>When the groop has grown. </b></i> The number of groop attendees over the years and where they travelled from. </p>
+    <br>
     <div class="container"  id="timeline">
     </div>
   </section>
@@ -202,7 +278,10 @@
 
   <section id="where", class="graphic-body">
     <h2>Where?</h2>
-
+    <br>
+    <p><b><i>Where we come from. </b></i> Our groop members travelled to the farm from across the country. Here's where
+    we call come from.</p>
+    <br>
     <!--map-->
     <div class="row">
       <div class="col-sm-9">
@@ -222,8 +301,8 @@
   <section id="this", class="graphic-body">
     <h2>This</h2>
     <br>
-    <p>The number of years we've been to Bonnaroo.</p>
-    <div id="flower-chart-key"></div>
+    <p><b><i>The number of years we've been to Bonnaroo.</b></i> Each petal shows the years each person has been to Bonnaroo.
+    The blue flower represents Roo 2020. </p>
     <br>
     <div id = "flower-chart"></div>
   </section>
@@ -234,11 +313,10 @@
     <div class="quote centered">DON'T BE THAT GUY/GAL</div>
   </div>
 
-  <section id="what", class="graphic-body">
-    <h2>What?</h2>
+  <section id="that", class="graphic-body">
+    <h2>That</h2>
     <br>
-    <p>Music we listen to</p>
-    <br>
+    <p><b><i>Music we listen to. </b></i> Collaborative playlists on Spotify. </p>    <br>
     <!--<br>-->
     <!--<h3>Best Of:</h3>-->
     <!--<br>-->
@@ -256,7 +334,7 @@
   </section>
 
   <div class="text-white divide">
-    <img src="img/arch.jpeg">
+    <img src="img/piano.jpg">
     <div class="quote centered">STAY TRUE TO ROO</div>
   </div>
 
