more images and new spotify playlist

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
     <!--<h3>Best Of:</h3>-->
     <!--<br>-->
     <iframe src="https://open.spotify.com/embed/playlist/4y6axTxYXTqpzWTkhwXgF0" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
+    <iframe src="https://open.spotify.com/embed/playlist/6VXGEatoQ6YQmooYoa5sm4" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
     <!--<iframe src="https://open.spotify.com/embed/playlist/4rlAVRRK9Yye2AQv5iaGTM" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>-->
     <!--<iframe src="https://open.spotify.com/embed/playlist/3yumm8V3mF5YdiR7huSMoC" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>-->
     <!--<iframe src="https://open.spotify.com/embed/playlist/0HSbm5vyXzUcu459E8rLL8" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>-->
